menu button z-index fix

--- a/_sass/royforge/_layout.scss
+++ b/_sass/royforge/_layout.scss
@@ -47,6 +47,8 @@
 }
 
 .site-nav {
+  float: right;
+  z-index: 3;
   position: absolute;
   top: 9px;
   right: $spacing-unit / 2;
